# better-fetch-mcp

./: .gitignore  .mcp.json  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  MCP_CLIENT_CONFIG.md  README.md  dist-workspace.toml  quick-test.sh
benches/: toc_bench.rs
examples/: end_to_end_test.rs  full_integration_test.rs  simulate_mcp.rs  test_edge_cases.rs  test_fetch.rs  test_html_cleaning.rs
scripts/: quick-test.sh
src/: main.rs  toc.rs
src/snapshots/: llms_fetch_mcp__toc__tests__config_snapshots__snapshot_astro_full_large_budget.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_convex_full_large_budget.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_deep_nesting_convex_full.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_large_budget_react.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_minimal_threshold_convex.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_small_budget_react.snap  llms_fetch_mcp__toc__tests__config_snapshots__snapshot_very_tight_budget_python.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_angular_install.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_astro_excerpt.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_convex_excerpt.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_django_install.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_fastapi_tutorial.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_go_tutorial.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_kotlin_getting_started.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_laravel_install.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_nextjs_llms.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_python_tutorial.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_qwik_getting_started.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_react_learn.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_real_world_astro_excerpt.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_remix_quickstart.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_solidjs_quickstart.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_tailwind_install.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_vite_guide.snap  llms_fetch_mcp__toc__tests__snapshots__snapshot_vue_intro.snap
test-fixtures/: angular-install.txt  astro-excerpt.txt  astro-llms-full.txt  convex-excerpt.txt  convex-llms-full.txt  django-install.txt  fastapi-tutorial.txt  go-tutorial.txt  kotlin-getting-started.txt  laravel-install.txt  nextjs-llms.txt  python-tutorial.txt  qwik-getting-started.txt  react-learn.txt  remix-quickstart.txt  solidjs-quickstart.txt  tailwind-install.txt  vite-guide.txt  vue-intro.txt
tests/: integration_test.rs  manual_test.sh  snapshot_tests.rs
(+7 files in other folders)
