[package]
name = "better-fetch-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server that fetches web content as LLM-friendly Markdown with smart format detection and HTML cleaning"
homepage = "https://github.com/Crazytieguy/better-fetch-mcp"
repository = "https://github.com/Crazytieguy/better-fetch-mcp"

[dependencies]
html2md = "0.2.15"
md5 = "0.8.0"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["rustls-tls", "blocking"] }
rmcp = "0.8.0"
schemars = { version = "1.0.4", features = ["derive"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
