[package]
name = "llms-fetch-mcp"
version = "0.1.2"
edition = "2024"
description = "llms.txt-aware MCP server - fetches and caches web content in LLM-friendly formats"
license = "MIT"
homepage = "https://github.com/Crazytieguy/llms-fetch-mcp"
repository = "https://github.com/Crazytieguy/llms-fetch-mcp"
keywords = ["mcp", "llmstxt", "llms-txt", "markdown", "llm"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
dom_smoothie = "0.13.0"
html2md = "0.2.15"
reqwest = { version = "0.12.23", features = ["rustls-tls", "blocking"] }
rmcp = "0.8.0"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
